fix: resolve anchor scroll cutoff by adding scroll-mt classes

--- a/output/styles.css
+++ b/output/styles.css
@@ -397,8 +397,8 @@
   .animate-bounce {
     animation: var(--animate-bounce);
   }
-  .scroll-mt-10 {
-    scroll-margin-top: calc(var(--spacing) * 10);
+  .scroll-mt-20 {
+    scroll-margin-top: calc(var(--spacing) * 20);
   }
   .list-inside {
     list-style-position: inside;
@@ -513,6 +513,9 @@
   }
   .overflow-hidden {
     overflow: hidden;
+  }
+  .scroll-smooth {
+    scroll-behavior: smooth;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -1094,10 +1097,6 @@
       line-height: var(--tw-leading, var(--text-5xl--line-height));
     }
   }
-}
-html {
-  scroll-behavior: smooth;
-  scroll-padding-top: 68px;
 }
 @layer utilities {
   @keyframes slideDown {
